  not intersect. Requires at least GEOS 3.12.
- The ``voronoi_polygons`` now accepts the ``ordered`` keyword, optionally forcing the
  order of polygons within the GeometryCollection to follow the order of input
  coordinates. Requires at least GEOS 3.12. (#1968)
- Add option on ``invalid="fix"`` to ``from_wkb`` and ``from_wkt`` (#2094)
- Add function ``minimum_clearance_line`` (#2106)

Breaking changes in GEOS 3.12:

- ``oriented_envelope`` / ``minimum_rotated_rectangle`` changed its implementation
  in GEOS 3.12. Be aware that results will change when updating GEOS. Coincidentally
  the implementation is similar to the shapely 1.x approach. (#1885)
- ``get_coordinate_dimension`` / ``has_z`` now considers geometries three dimensional if
  they have a NaN z coordinate. (#1885)
- ``voronoi_polygons`` changed its output from a LINESTRING to a MULTILINESTRING in case
  ``only_edges=True``. (#1885)
- The WKT representation of a MULTIPOINT changed from for example "MULTIPOINT (0 0, 1 1)"
  to "MULTIPOINT ((0 0), (1 1))". (#1885)

Deprecations:

- The ``shapely.geos`` module is deprecated. All GEOS-version related attributes are
  available directly from the top-level ``shapely`` namespace as well (already since
  shapely 2.0) (#2145).

Packaging:

- Binary wheels are now built for musllinux (Alpine) x86_64 platforms (#1996).


2.0.6 (2024-08-19)
------------------

Bug fixes:

- Fix compatibility with NumPy 2.1.0 (#2099).

Wheels are available for Python 3.13 (and still include GEOS 3.11.4).

2.0.5 (2024-07-13)
------------------

Binary wheels on PyPI include GEOS 3.11.4 from 2024-06-05. Furthermore,
universal2 wheels are removed for macOS since both x86_64 and arm64 wheels are
provided.

Bug fixes:

- Fix Point x/y/z attributes to return Python floats (#2074).
- Fix affinity for Apple silicon with NumPy 2.0 by reverting matmul, and
  use direct matrix multiplication instead (#2085).

2.0.4 (2024-04-16)
------------------
